# models/feedback.js
@@ -4,13 +4,18 @@ const mongoose = require("mongoose");
 const feedbackSchema = new mongoose.Schema(
   {
     // 名稱
-    contactPerson: { String, required: [true, "姓名未填寫"] },
+    contactPerson: { type: String, required: [true, "姓名未填寫"] },
     // 電話
-    phone: { String, required: [true, "電話未填寫"] },
+    phone: { type: String },
     // 信箱
-    email: { String, required: [true, "信箱未填寫"] },
+    email: { type: String, required: [true, "信箱未填寫"] },
     // 內容
-    feedback: { String, required: [true, "內容未填寫"] },
+    feedback: { type: String, required: [true, "內容未填寫"] },
+    // 從哪裡得知此網站
+    source: {
+      type: String,
+      enum: ["網路搜尋", "社群媒體", "親友介紹", "其他"],
+    },
   },
   {
     versionKey: false,
