# routes/feedback.js
@@ -5,9 +5,9 @@ const feedbackController = require("../controllers/feedbackController");
 
 // 新增回饋
 router.post(
-    "/",
-    handleErrorAsync(feedbackController.newFeedback)
-    /*  #swagger.tags = ['Feedback-front']
+  "/",
+  handleErrorAsync(feedbackController.newFeedback)
+  /*  #swagger.tags = ['Feedback']
         #swagger.summary = '新增回饋'   
         #swagger.description = '新增回饋'
         #swagger.parameters['body'] = {
@@ -18,6 +18,7 @@ router.post(
                 $phone:'電話',
                 $email: '信箱',
                 $feedback: '內容',
+                $source: '從哪裡得知此網站',
             }
         }
         
